@@ -253,6 +253,24 @@ name|SearchGroupsFieldCommandResult
 argument_list|>
 argument_list|>
 block|{
+DECL|field|TOP_GROUPS
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|TOP_GROUPS
+init|=
+literal|"topGroups"
+decl_stmt|;
+DECL|field|GROUP_COUNT
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|GROUP_COUNT
+init|=
+literal|"groupCount"
+decl_stmt|;
 DECL|field|searcher
 specifier|private
 specifier|final
@@ -291,6 +309,7 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+specifier|final
 name|NamedList
 argument_list|<
 name|NamedList
@@ -300,7 +319,12 @@ init|=
 operator|new
 name|NamedList
 argument_list|<>
+argument_list|(
+name|data
+operator|.
+name|size
 argument_list|()
+argument_list|)
 decl_stmt|;
 for|for
 control|(
@@ -320,7 +344,9 @@ init|=
 operator|new
 name|NamedList
 argument_list|<>
-argument_list|()
+argument_list|(
+literal|2
+argument_list|)
 decl_stmt|;
 if|if
 condition|(
@@ -377,7 +403,7 @@ name|commandResult
 operator|.
 name|add
 argument_list|(
-literal|"topGroups"
+name|TOP_GROUPS
 argument_list|,
 name|serializeSearchGroup
 argument_list|(
@@ -411,7 +437,7 @@ name|commandResult
 operator|.
 name|add
 argument_list|(
-literal|"groupCount"
+name|GROUP_COUNT
 argument_list|,
 name|groupedCount
 argument_list|)
@@ -480,7 +506,12 @@ init|=
 operator|new
 name|HashMap
 argument_list|<>
+argument_list|(
+name|shardResponse
+operator|.
+name|size
 argument_list|()
+argument_list|)
 decl_stmt|;
 for|for
 control|(
@@ -524,6 +555,7 @@ name|SuppressWarnings
 argument_list|(
 literal|"unchecked"
 argument_list|)
+specifier|final
 name|NamedList
 argument_list|<
 name|List
@@ -546,7 +578,7 @@ name|topGroupsAndGroupCount
 operator|.
 name|get
 argument_list|(
-literal|"topGroups"
+name|TOP_GROUPS
 argument_list|)
 decl_stmt|;
 if|if
@@ -745,6 +777,7 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+specifier|final
 name|Integer
 name|groupCount
 init|=
@@ -755,7 +788,7 @@ name|topGroupsAndGroupCount
 operator|.
 name|get
 argument_list|(
-literal|"groupCount"
+name|GROUP_COUNT
 argument_list|)
 decl_stmt|;
 name|result
@@ -799,6 +832,7 @@ name|Sort
 name|groupSort
 parameter_list|)
 block|{
+specifier|final
 name|NamedList
 argument_list|<
 name|Object
@@ -809,7 +843,12 @@ init|=
 operator|new
 name|NamedList
 argument_list|<>
+argument_list|(
+name|data
+operator|.
+name|size
 argument_list|()
+argument_list|)
 decl_stmt|;
 for|for
 control|(
